2008-09-07  Johan Euphrosine  <proppy@aminche.com>  (tiny change)

	* ibuf-ext.el (ibuffer-diff-buffer-with-file-1): Shell quote
	buffer's filename.

2008-09-07  Martin Rudalics  <rudalics@gmx.at>

	* subr.el (cancel-change-group): Widen buffer temporarily when
	undoing changes.  (Bug#810)

2008-09-07  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-stop-subjob): Using jdb, suspend threads
	with gud-stop-subjob rather than exit debugger.

2008-09-06  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* proced.el: Require time-date.
	(proced-command-alist, proced-command, proced-goal-header-re)
	(proced-sorting-schemes-alist, proced-sorting-scheme)
	(proced-header-alist, proced-sorting-schemes-re)
	(proced-skip-regexp, proced-next-line, proced-previous-line)
	(proced-listing-type, proced-sorting-scheme-p): Removed.
	(proced-grammar-alist, proced-custom-attributes)
	(proced-format-alist, proced-format, proced-filter-alist)
	(proced-filter, proced-sort, proced-goal-attribute)
	(proced-timer-interval, proced-timer-flag, proced-timer)
	(proced-process-alist, proced-sort-internal, proced-process-tree)
	(proced-header-help-echo, proced-field-help-echo): New variables.
	(proced-pid-at-point, proced-timer, proced-mark-process-alist)
	(proced-omit-process, proced-filter, proced-process-tree)
	(proced-filter-children, proced-children-pids)
	(proced-filter-parents, proced-<, proced-string-lessp)
	(proced-time-lessp, proced-xor, proced-sort-p)
	(proced-format-time, proced-format-start, proced-format-ttname)
	(proced-format, proced-process-attributes): New functions.
	(proced-toggle-timer-flag, proced-mark-children)
	(proced-mark-parents, proced-filter-interactive)
	(proced-filter-attribute, proced-sort-interactive)
	(proced-sort-header, proced-format-interactive): New commands.
	(proced-move-to-goal-column): Use goal-column.
	(proced-mode): Use proced-timer.
	(proced-do-mark-all): Display process count.  Use use-region-p.
	Simplify.